--- a/style.css
+++ b/style.css
@@ -1,13 +1,51 @@
 body {
-    background-color: white;
+    background: red;
+    box-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    margin: auto;
+    padding: 10%;
+    color: white;
 }
 
+
 h1 {
-    color: black;
-    font-size: 45px;
+    text-align: left;
+    display: flex;
+    font-size: 50px;    
+    width: 400px;
+    margin-left: -30px;
 }
 
 p {
-    color: black;
     font-size: 16px;
+    text-align: left;
+    width: 400px;
+    font-size: 20px;
+    margin-top: -10px;
+    margin-left: -30px;
+}
+
+ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    list-style: none;
+    text-align: center;
+    margin-left: -20px;
+}
+a {
+    font-size: 18px;
+    color: white;
+    margin: 10px;
+}
+
+header {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-content: center;
 }
