--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-body {
+
+.indexbod {
     background: red;
-    box-align: center;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
@@ -8,15 +8,17 @@ body {
     margin: auto;
     padding: 10%;
     color: white;
+
 }
 
 
-h1 {
+.indexh1 {
     text-align: left;
     display: flex;
     font-size: 50px;    
     width: 400px;
     margin-left: -30px;
+
 }
 
 p {
@@ -26,6 +28,7 @@ p {
     font-size: 20px;
     margin-top: -10px;
     margin-left: -30px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 ul {
@@ -37,15 +40,68 @@ ul {
     text-align: center;
     margin-left: -20px;
 }
-a {
+
+.nav {
     font-size: 18px;
     color: white;
     margin: 10px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-header {
+/* .logo {
+    list-style: none;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
+    align-items: flex-start;
+} */
+
+.portnav {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.container {
+    display: grid;
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(3, 1fr);
+    justify-content: center;
+    width: auto;
+    margin: 40px;
+}
+
+embed {
+    border: 5px solid white;
+    margin: 10px;
+    padding: 10px;
+    background: transparent;
+    
+}
+
+#porthead {
+    color: white;
+    text-align: center;
+    font-size: 50px;    
+    width: 100%;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.portbod {
+    background: red;
     align-content: center;
+}
+
+.aboutmemsg {
+    color: white;
+    text-align: left;
+    font-size: 50px;    
+    width: 100%;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.aboutmebod {
+    background: red;
 }
