added a couple of my actual pages to portfolio page

--- a/style.css
+++ b/style.css
@@ -66,8 +66,8 @@ ul {
 
 .container {
     display: grid;
-    grid-template-rows: repeat(3, 1fr);
-    grid-template-columns: repeat(3, 1fr);
+    /* grid-template-rows:  */
+    grid-template-columns: repeat(2, 1fr);
     justify-content: center;
     width: auto;
     margin: 40px;
