--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
 @import "../../node_modules/bootstrap/scss/bootstrap.scss";
 
+
+body { 
+    max-width: 100%;
+    max-height: 100%
+}
+
 .indexbod {
     background: red;
     display: flex;
@@ -9,6 +15,7 @@
     margin: auto;
     padding: 10%;
     color: white;
+  
 
 }
 
@@ -83,8 +90,8 @@ ul {
 
 embed {
     border: 5px solid white;
-    margin: 10px;
-    padding: 10px;
+    margin: 5px;
+    padding: 5px;
     background: transparent;
     
 }
