--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* @import "./node_modules/bootstrap/scss/bootstrap.scss"; */
+@import "./node_modules/bootstrap/scss/bootstrap.scss";
 
 
 body { 
@@ -7,6 +7,7 @@ body {
     margin: auto;
     padding: 10%;
     color: white;
+    text-align: center;
     text-shadow: -.5vh .25vh .5vh rgba(0,0,0,0.3);
     font-family: 'Abhaya Libre', serif;
     font-weight: bold;
