--- a/style.css
+++ b/style.css
@@ -13,10 +13,10 @@ body {
 }
 
 div {
-    /* align-items: center;
+    align-items: center;
     justify-items: center;
     justify-content: center;
-    align-content: center; */
+    align-content: center;
 }
 
 header {
