--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@ body {
     text-shadow: -.5vh .25vh .5vh rgba(0,0,0,0.3);
     font-family: 'Abhaya Libre', serif;
     font-weight: bold;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 div {
