--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
 @import "./node_modules/bootstrap/scss/bootstrap.scss";
 
+
+html {
+    max-width: 100%;
+    max-height: 100%;
+}
+
 body { 
     background: red;
     align-content: center;
